# study-buddy-ai-backend

./: .env.example  .gitignore  Makefile  README.md  cost_analysis.md  db.py  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: ci.yaml
api/: file_upload.py
api/v1/endpoints/: auth.py  file_upload.py  flashcards.py  quizzes.py
backend/: main.py
backend/api/: file_upload.py  flashcards.py  quizzes.py
backend/core/: config.py
backend/utils/: extractor.py  flashcards.py  indexer.py  quizzies.py
core/: config.py  constants.py  dependencies.py  security.py  settings.py
frontend/ai-study-buddy/: package-lock.json  package.json
frontend/ai-study-buddy/src/app/: page.tsx
frontend/ai-study-buddy/src/components/: FlashcardGenerator.tsx  FlashcardViewer.tsx  HeroSection.tsx  QuizGenerator.tsx  QuizTaker.tsx
migrations/versions/: 705c16f7c915_create_embeddings_table.py  d995c04f0ed7_initial_schema.py
models/: Flashcards.py  Quiz.py  file.py
routers/: auth.py  file_upload.py  flashcards.py  quizzes.py
schemas/: Flashcards.py  Quiz.py  auth.py  embeding.py  exception.py  file.py  flashcards.py  quiz.py
services/: auth_services.py  embeding_service.py  file_services.py
tests/: test_gemini.py
utils/: extractor.py  flashcards.py  helper.py  indexer.py  limiter.py  logger.py  quizzes.py  quizzies.py  supabase_client.py
